--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 }
  
 canvas {
-    background-color: rgb(255, 255, 255) !important;
+    /* background-color: rgb(255, 255, 255) !important; */
     
 }
 
